--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
     "license": "Apache-2.0",
     "autoload": {
         "classmap": ["lib/CultureFeed", "lib/OAuth"]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
