--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "license": "Apache-2.0",
     "require": {
       "cultuurnet/cdb": "2.x-dev"
+      //"cultuurnet/cdb": "dev-feature/CFK-78 as 2.x-dev"
     },
     "autoload": {
         "classmap": ["lib/CultureFeed", "lib/OAuth"]
