Add type to composer.json. Needed for installer-paths support.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "cultuurnet/culturefeed",
+    "type": "drupal-module",
     "description": "CultuurNet culturefeed PHP library & Drupal module",
     "license": "Apache-2.0",
     "require": {
