--- a/culturefeed.routing.yml
+++ b/culturefeed.routing.yml
@@ -9,7 +9,7 @@ culturefeed.overview:
 culturefeed.api:
   path: '/admin/config/culturefeed/api'
   defaults:
-    _form: 'Drupal\culturefeed\Form\ApiSettings'
+    _form: 'Drupal\culturefeed\Form\ApiSettingsForm'
     _title: 'Culturefeed'
   requirements:
     _permission: 'administer site configuration'
@@ -17,7 +17,7 @@ culturefeed.api:
 culturefeed.oauth.connect:
   path: '/culturefeed/oauth/connect'
   defaults:
-    _content: '\Drupal\culturefeed\Controller\Culturefeed::connect'
+    _content: '\Drupal\culturefeed\Controller\CulturefeedController::connect'
     _title: 'Connect'
   requirements:
     _access: 'TRUE'
@@ -25,7 +25,7 @@ culturefeed.oauth.connect:
 culturefeed.oauth.authorize:
   path: '/culturefeed/oauth/authorize'
   defaults:
-    _content: '\Drupal\culturefeed\Controller\Culturefeed::authorize'
+    _content: '\Drupal\culturefeed\Controller\CulturefeedController::authorize'
     _title: 'Connect'
   requirements:
     _access: 'TRUE'
