III-42 move authentication to service

--- a/culturefeed.services.yml
+++ b/culturefeed.services.yml
@@ -1,4 +1,9 @@
 services:
+  culturefeed.drupal:
+    class: DrupalCultureFeed
+  culturefeed.authentication:
+    class: Drupal\culturefeed\Authentication
+    arguments: ['@culturefeed.drupal', '@url_generator', '@config.factory', '@culturefeed.user.map']
   culturefeed.user_name.factory:
     class: Drupal\culturefeed\UserNameFactory
     arguments: ['@entity.query', '@current_user']
