--- a/culturefeed.services.yml
+++ b/culturefeed.services.yml
@@ -1,9 +1,13 @@
 services:
-  culturefeed.drupal:
-    class: DrupalCultureFeed
+  culturefeed.oauth_client:
+    class: Drupal\culturefeed\OAuthClient
+    arguments: ['@config.factory']
+  culturefeed.instance:
+    class: Drupal\culturefeed\Instance
+    arguments: ['@culturefeed.oauth_client']
   culturefeed.authentication:
     class: Drupal\culturefeed\Authentication
-    arguments: ['@culturefeed.drupal', '@url_generator', '@config.factory', '@culturefeed.user.map', '@entity.manager']
+    arguments: ['@culturefeed.instance', '@url_generator', '@culturefeed.user.map', '@entity.manager']
   culturefeed.user_name.factory:
     class: Drupal\culturefeed\UserNameFactory
     arguments: ['@entity.query', '@current_user']
