--- a/culturefeed.services.yml
+++ b/culturefeed.services.yml
@@ -7,7 +7,7 @@ services:
     arguments: ['@culturefeed.oauth_client']
   culturefeed.authentication:
     class: Drupal\culturefeed\Authentication
-    arguments: ['@culturefeed.factory', '@url_generator', '@culturefeed.user.map', '@entity.manager']
+    arguments: ['@culturefeed.factory', '@url_generator', '@culturefeed.user.map', '@entity.manager', '@entity.query']
   culturefeed.user_name.factory:
     class: Drupal\culturefeed\UserNameFactory
     arguments: ['@entity.query', '@current_user']
