iii-44: Clean up of dependency injection layer and controllers

--- a/culturefeed_udb3/composer.json
+++ b/culturefeed_udb3/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cultuurnet/udb3",
+    "name": "cultuurnet/culturefeed_udb3",
     "description": "Culturefeed UDB3 search platform",
     "license": "GPLv3",
     "repositories": [
