--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -1,4 +1,17 @@
 services:
-  culturefeed_udb3.search_api:
-    class: Drupal\culturefeed_udb3\SearchApi
+  culturefeed_udb3.iri_generator:
+    class: Drupal\culturefeed_udb3\IriGenerator
+    arguments: ['@url_generator']
+  culturefeed_udb3.search:
+    class: CultuurNet\UDB3\PullParsingSearchService
+    arguments: ['@culturefeed_udb3.search_api_2', '@culturefeed_udb3.iri_generator']
+  culturefeed_udb3.event:
+    class: CultuurNet\UDB3\DefaultEventService
+    arguments: ['@culturefeed_udb3.search_api_2', '@culturefeed_udb3.iri_generator']
+  culturefeed_udb3.search_api_2.factory:
+    class: Drupal\culturefeed_udb3\SearchApi2Factory
     arguments: ['@config.factory']
+  culturefeed_udb3.search_api_2:
+    class: CultuurNet\UDB3\SearchAPI2\DefaultSearchService
+    factory_service: culturefeed_udb3.search_api_2.factory
+    factory_method: create
