--- a/culturefeed_udb3/culturefeed_udb3.info.yml
+++ b/culturefeed_udb3/culturefeed_udb3.info.yml
@@ -4,3 +4,6 @@ description: CultureFeed UDB3.
 package: Culturefeed
 version: 1.x-dev
 core: 8.x
+dependencies:
+  - culturefeed
+  - culturefeed_search
