--- a/culturefeed_udb3/culturefeed_udb3.routing.yml
+++ b/culturefeed_udb3/culturefeed_udb3.routing.yml
@@ -21,3 +21,11 @@ culturefeed_udb3.event:
     _title: 'Event detail'
   requirements:
     _access: 'TRUE'
+
+culturefeed_udb3.user:
+  path: '/udb3/api/1.0/user'
+  defaults:
+    _content: '\Drupal\culturefeed_udb3\Controller\UserRestController::info'
+    _title: 'User info'
+  requirements:
+    _access: 'TRUE'
