--- a/culturefeed_udb3/culturefeed_udb3.routing.yml
+++ b/culturefeed_udb3/culturefeed_udb3.routing.yml
@@ -28,4 +28,4 @@ culturefeed_udb3.user:
     _content: '\Drupal\culturefeed_udb3\Controller\UserRestController::info'
     _title: 'User info'
   requirements:
-    _access: 'TRUE'
+    _custom_access:  '\Drupal\culturefeed_udb3\Controller\UserRestController::access'
