--- a/culturefeed.services.yml
+++ b/culturefeed.services.yml
@@ -4,13 +4,17 @@ services:
     arguments: ['@config.factory']
   culturefeed.factory:
     class: Drupal\culturefeed\CultureFeedFactory
-    arguments: ['@culturefeed.oauth_client']
+    arguments: ['@culturefeed.oauth_client', '@current_user', '@culturefeed.user_map', '@entity.manager', '@entity.query']
+  culturefeed.factory.authenticated:
+    class: Drupal\culturefeed\CultureFeedFactory
+    factory_service: culturefeed.factory
+    factory_method: createAuthenticated
   culturefeed.authentication:
     class: Drupal\culturefeed\Authentication
-    arguments: ['@culturefeed.factory', '@url_generator', '@culturefeed.user.map', '@entity.manager', '@entity.query']
+    arguments: ['@culturefeed.factory', '@url_generator', '@culturefeed.user_map', '@entity.manager', '@entity.query']
   culturefeed.user_factory:
     class: Drupal\culturefeed\UserFactory
-    arguments: ['@culturefeed.factory', '@current_user', '@entity.manager', '@entity.query']
+    arguments: ['@culturefeed.factory.authenticated', '@current_user', '@culturefeed.user_map']
   culturefeed.current_user:
     class: Drupal\culturefeed\UserFactory
     factory_service: culturefeed.user_factory
@@ -18,7 +22,7 @@ services:
   culturefeed.user_name.factory:
     class: Drupal\culturefeed\UserNameFactory
     arguments: ['@entity.query', '@current_user']
-  culturefeed.user.map:
+  culturefeed.user_map:
     class: Drupal\culturefeed\UserMap
     arguments: ['@entity.manager', '@entity.query', '@current_user', '@culturefeed.user_name.factory']
   access_check.culturefeed.current_user:
