--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -25,3 +25,7 @@ services:
     class: CultuurNet\UDB3\SearchAPI2\DefaultSearchService
     factory_service: culturefeed_udb3.search_api_2.factory
     factory_method: create
+  culturefeed_udb3.subscriber:
+    class: Drupal\culturefeed_udb3\JsonLdSubscriber
+    tags:
+      - { name: event_subscriber }
