--- a/culturefeed.services.yml
+++ b/culturefeed.services.yml
@@ -1,10 +1,13 @@
 services:
+  logger.channel.culturefeed:
+    parent: logger.channel_base
+    arguments: ['culturefeed']
   culturefeed.oauth_client:
     class: Drupal\culturefeed\OAuthClientFactory
     arguments: ['@config.factory']
   culturefeed.factory:
     class: Drupal\culturefeed\CultureFeedFactory
-    arguments: ['@culturefeed.oauth_client', '@current_user', '@culturefeed.user_map', '@entity.manager', '@entity.query']
+    arguments: ['@culturefeed.oauth_client', '@config.factory', '@current_user', '@culturefeed.user_map', '@entity.manager', '@entity.query', '@logger.channel.culturefeed']
   culturefeed.factory.authenticated:
     class: Drupal\culturefeed\CultureFeedFactory
     factory_service: culturefeed.factory
@@ -26,7 +29,7 @@ services:
     class: Drupal\culturefeed\UserMap
     arguments: ['@entity.manager', '@entity.query', '@current_user', '@culturefeed.user_name.factory']
   access_check.culturefeed.current_user:
-    class: Drupal\culturefeed\Access\User
+    class: Drupal\culturefeed\Access\UserAccess
     arguments: ['@culturefeed.current_user']
     tags:
       - { name: access_check, applies_to: _culturefeed_current_user }
