Switch content to controller for search and event routes
You either set _content or _controller in the defaults of a route. If you use _content the request will not handle accept content-types correctly, use _controller instead.

--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -25,7 +25,7 @@ services:
     class: CultuurNet\UDB3\SearchAPI2\DefaultSearchService
     factory_service: culturefeed_udb3.search_api_2.factory
     factory_method: create
-  culturefeed_udb3.subscriber:
+  culturefeed_udb3.json_ld_subscriber:
     class: Drupal\culturefeed_udb3\JsonLdSubscriber
     tags:
       - { name: event_subscriber }
