--- a/culturefeed_udb3/culturefeed_udb3.routing.yml
+++ b/culturefeed_udb3/culturefeed_udb3.routing.yml
@@ -9,19 +9,22 @@ culturefeed_udb3.event_context:
 culturefeed_udb3.search:
   path: '/udb3/api/1.0/search'
   defaults:
-    _content: '\Drupal\culturefeed_udb3\Controller\RestController::search'
+    _controller: '\Drupal\culturefeed_udb3\Controller\RestController::search'
     _title: 'Search'
   requirements:
     _access: 'TRUE'
+    _format: ld_json
+    _method: GET
 
 culturefeed_udb3.event:
   path: '/udb3/event/{cdbid}'
   defaults:
-    _content: '\Drupal\culturefeed_udb3\Controller\RestController::event'
+    _controller: '\Drupal\culturefeed_udb3\Controller\RestController::event'
     _title: 'Event detail'
   requirements:
     _access: 'TRUE'
-    _format: ld_json|json
+    _format: ld_json
+    _method: GET
 
 culturefeed_udb3.user:
   path: '/udb3/api/1.0/user'
