--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -1,3 +1,5 @@
+parameters:
+  event.command.bus.parameter: event
 services:
   culturefeed_udb3.iri_generator:
     class: Drupal\culturefeed_udb3\IriGenerator
@@ -15,6 +17,25 @@ services:
     factory_method: get
     factory_service: cache_factory
     arguments: [culturefeed_udb3_event]
+  culturefeed_udb3.event.store:
+    class: Drupal\culturefeed_udb3\EventStore
+    arguments: ['@entity.manager', '@entity.query']
+  culturefeed_udb3.event.bus:
+    class: Broadway\EventHandling\SimpleEventBus
+  culturefeed_udb3.event.repository:
+    class: CultuurNet\UDB3\Event\EventRepository
+    arguments: ['@culturefeed_udb3.event.store', '@culturefeed_udb3.event.bus', '@culturefeed_udb3.search_api_2']
+  culturefeed_udb3.event.command_handler:
+    class: CultuurNet\UDB3\Event\EventCommandHandler
+    arguments: ['@culturefeed_udb3.event.repository']
+  culturefeed_udb3.event.command.bus:
+    class: CultuurNet\UDB3\CommandHandling\ResqueCommandBus
+    arguments: ['%event.command.bus.parameter%']
+    calls:
+      - [subscribe, ['@culturefeed_udb3.event.command_handler']]
+  culturefeed_udb3.event.tagger:
+    class: CultuurNet\UDB3\Event\DefaultEventTaggerService
+    arguments: ['@culturefeed_udb3.event', '@culturefeed_udb3.event.command.bus']
   culturefeed_udb3.event:
     class: Drupal\culturefeed_udb3\EventServiceCache
     arguments: ['@culturefeed_udb3.event.real', '@culturefeed_udb3.event.cache']
