--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -1,5 +1,5 @@
 parameters:
-  event.command.bus.parameter: event
+  command_bus.parameter: event
   resque.command.bus.event_command_context_set: broadway.command_handling.context
 
 services:
@@ -22,21 +22,30 @@ services:
     class: CultuurNet\UDB3\EventSourcing\ExecutionContextMetadataEnricher
   culturefeed_udb3.main_command_bus:
     class: CultuurNet\UDB3\CommandHandling\SimpleContextAwareCommandBus
-  culturefeed_udb3.event.bus:
+  culturefeed_udb3.event_bus:
     class: Broadway\EventHandling\SimpleEventBus
-  culturefeed_udb3.event.stream_metadata_enricher:
+  culturefeed_udb3.event_stream_metadata_enricher:
     class: Broadway\EventSourcing\MetadataEnrichment\MetadataEnrichingEventStreamDecorator
     calls:
       - [registerEnricher, ['@culturefeed_udb3.execution_context_metadata_enricher']]
-  culturefeed_udb3.event.command_bus_event_dispatcher:
+  culturefeed_udb3.command_bus_event_dispatcher:
     class: Broadway\EventDispatcher\EventDispatcher
     calls:
       - [addListener, ['%resque.command.bus.event_command_context_set%', ['@culturefeed_udb3.execution_context_metadata_enricher', 'setContext']]]
-  culturefeed_udb3.event.command.bus:
+  culturefeed_udb3.event_command_bus:
     class: CultuurNet\UDB3\CommandHandling\ResqueCommandBus
-    arguments: ['@culturefeed_udb3.main_command_bus', '%event.command.bus.parameter%', '@culturefeed_udb3.event.command_bus_event_dispatcher']
+    arguments: ['@culturefeed_udb3.main_command_bus', '%command_bus.parameter%', '@culturefeed_udb3.command_bus_event_dispatcher']
     calls:
-      - [subscribe, ['@culturefeed_udb3.event.command_handler']]
+      - [subscribe, ['@culturefeed_udb3.event_command_handler']]
+  culturefeed_udb3.event_store:
+    class: Drupal\culturefeed_udb3\EventStore
+    arguments: ['@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
+  culturefeed_udb3.event_repository:
+    class: CultuurNet\UDB3\Event\EventRepository
+    arguments: ['@culturefeed_udb3.event_store', '@culturefeed_udb3.event_bus', '@culturefeed_udb3.search_api_2', ['@culturefeed_udb3.event_stream_metadata_enricher']]
+  culturefeed_udb3.event_command_handler:
+    class: CultuurNet\UDB3\Event\EventCommandHandler
+    arguments: ['@culturefeed_udb3.event_repository']
 
   culturefeed_udb3.event.real:
     class: CultuurNet\UDB3\DefaultEventService
@@ -51,21 +60,12 @@ services:
     factory_method: get
     factory_service: cache_factory
     arguments: [culturefeed_udb3_event]
-  culturefeed_udb3.event.store:
-    class: Drupal\culturefeed_udb3\EventStore
-    arguments: ['@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
-  culturefeed_udb3.event.repository:
-    class: CultuurNet\UDB3\Event\EventRepository
-    arguments: ['@culturefeed_udb3.event.store', '@culturefeed_udb3.event.bus', '@culturefeed_udb3.search_api_2', ['@culturefeed_udb3.event.stream_metadata_enricher']]
-  culturefeed_udb3.event.command_handler:
-    class: CultuurNet\UDB3\Event\EventCommandHandler
-    arguments: ['@culturefeed_udb3.event.repository']
   culturefeed_udb3.event.tagger:
     class: CultuurNet\UDB3\Event\DefaultEventTaggerService
-    arguments: ['@culturefeed_udb3.event', '@culturefeed_udb3.event.command.bus']
+    arguments: ['@culturefeed_udb3.event', '@culturefeed_udb3.event_command_bus']
   culturefeed_udb3.event.used_keywords_memory_repository:
     class: CultuurNet\UDB3\UsedKeywordsMemory\UsedKeywordsMemoryRepository
-    arguments: ['@culturefeed_udb3.event.store', '@culturefeed_udb3.event.bus']
+    arguments: ['@culturefeed_udb3.event_store', '@culturefeed_udb3.event_bus']
   culturefeed_udb3.event.used_keywords_memory:
     class: CultuurNet\UDB3\UsedKeywordsMemory\DefaultUsedKeywordsMemoryService
     arguments: ['@culturefeed_udb3.event.used_keywords_memory_repository']
