--- a/culturefeed_udb3/culturefeed_udb3.services.yml
+++ b/culturefeed_udb3/culturefeed_udb3.services.yml
@@ -39,6 +39,13 @@ services:
     class: CultuurNet\UDB3\UDB2\EntryAPIFactory
     factory_service: culturefeed_udb3.udb2_entry_api.factory
     factory_method: get
+  culturefeed_udb3.udb2_entry_api_improved.factory:
+    class: Drupal\culturefeed_udb3\UDB2EntryApiImprovedFactory
+    arguments: ['@config.factory', '@culturefeed.consumer_credentials']
+  culturefeed_udb3.udb2_entry_api_improved:
+    class: CultuurNet\UDB3\UDB2\EntryAPIImprovedFactory
+    factory_service: culturefeed_udb3.udb2_entry_api_improved.factory
+    factory_method: get
   culturefeed_udb3.event_store:
     class: Drupal\culturefeed_udb3\EventStore
     arguments: ['@entity.manager', '@entity.query', '@culturefeed_udb3.serialize', '@culturefeed_udb3.serialize']
@@ -47,7 +54,7 @@ services:
     arguments: ['@culturefeed_udb3.event_store', '@culturefeed_udb3.event_bus', ['@culturefeed_udb3.event_stream_metadata_enricher']]
   culturefeed_udb3.event_repository.factory:
     class: Drupal\culturefeed_udb3\EventRepositoryFactory
-    arguments: ['@culturefeed_udb3.local_event_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
+    arguments: ['@culturefeed_udb3.local_event_repository', '@culturefeed_udb3.search_api_2', '@culturefeed_udb3.udb2_entry_api', '@culturefeed_udb3.udb2_entry_api_improved', '@culturefeed_udb3.event_stream_metadata_enricher', '@config.factory']
   culturefeed_udb3.event_repository:
     class: CultuurNet\UDB3\UDB2\EventRepository
     factory_service: culturefeed_udb3.event_repository.factory
