--- a/culturefeed_udb3/culturefeed_udb3.routing.yml
+++ b/culturefeed_udb3/culturefeed_udb3.routing.yml
@@ -55,10 +55,20 @@ culturefeed_udb3.user.keywords:
     _method: GET
 
 culturefeed_udb3.events.tag:
-  path: 'events/tag'
+  path: '/udb3/api/1.0/events/tag'
   defaults:
-    _controller: '\Drupal\culturefeed_udb3\Controller\EventsController::tag'
+    _controller: '\Drupal\culturefeed_udb3\Controller\EventsController::tagEvents'
     _title: 'Events tagger'
+  requirements:
+    _culturefeed_current_user: 'TRUE'
+    _format: json
+    _method: POST
+
+culturefeed_udb3.query.tag:
+  path: '/udb3/api/1.0/query/tag'
+  defaults:
+    _controller: '\Drupal\culturefeed_udb3\Controller\EventsController::tagQuery'
+    _title: 'Query tagger'
   requirements:
     _culturefeed_current_user: 'TRUE'
     _format: json
